--- a/springShiroWeb/pom.xml
+++ b/springShiroWeb/pom.xml
@@ -92,7 +92,7 @@
             <version>1.2</version>
         </dependency>
 
-       <!--  aspectj相关jar包
+       <!--  aspectj相关jar包-->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
@@ -102,7 +102,7 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.7.4</version>
-        </dependency>-->
+        </dependency>
 
         <!--spring 依赖-->
         <dependency>
