--- a/springShiroWeb/pom.xml
+++ b/springShiroWeb/pom.xml
@@ -62,6 +62,13 @@
             <version>1.2.4</version>
         </dependency>
 
+        <!--数据库连接-->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>8.0.27</version>
+        </dependency>
+
         <!--mysql-->
         <dependency>
             <groupId>mysql</groupId>
@@ -107,6 +114,11 @@
         <!--spring 依赖-->
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.2.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.2.1.RELEASE</version>
         </dependency>
@@ -130,8 +142,18 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.2.1.RELEASE</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>4.2.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>4.2.1.RELEASE</version>
+        </dependency>
 
+    </dependencies>
 
     <build>
         <finalName>springShiroWeb</finalName>
@@ -145,6 +167,11 @@
                     <webAppConfig>
                         <contextPath>/${project.build.finalName}</contextPath>
                     </webAppConfig>
+                    <connectors>
+                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                            <port>9000</port>
+                        </connector>
+                    </connectors>
                 </configuration>
             </plugin>
         </plugins>
